<resources>
    <string name="app_name">Portfolio</string>
    <string name="esther_jolugba">Esther Jolugba</string>
    <string name="mobile_developer">Mobile developer</string>
    <string name="bio">I am a girl who wants to live in a world filled with\n innovative problem solving software.</string>
    <string name="bio_land">I am a girl who wants to live in a world filled with innovative problem solving software.</string>
    <string name="play_store">Play Store</string>
    <string name="github">Github</string>
    <string name="bitbucket">Bitbucket</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="google_plus">Google Plus</string>
    <string name="youtube">Youtube</string>
    <string name="facebook">Facebook</string>
    <string name="dribble">Dribble</string>
    <string name="linkedin">Linkedin</string>
    <string name="e_mail">E-mail</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="android">Android</string>
    <string name="website">Website</string>
    <string name="skype">Skype</string>
    <string name="google">Google</string>
    <string name="email_address">Email Address</string>
    <string name="fullname">Fullname</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="textview">TextView</string>
</resources>
